<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- tab title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_local_video"
            style="@style/fragment_tab_style"
            android:text="@string/video"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_local_image"
            style="@style/fragment_tab_style"
            android:text="@string/image"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_local_document"
            style="@style/fragment_tab_style"
            android:text="@string/document"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_local_application"
            style="@style/fragment_tab_style"
            android:text="@string/application"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_local_other"
            style="@style/fragment_tab_style"
            android:text="@string/other"
            android:clickable="true"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_cursor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CDB481"
            android:contentDescription="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/sperator_line_color" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_local_files"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp" />

</LinearLayout>