<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:background="@color/listview_bg_withgroup"-->
    <!--tools:ignore="Overdraw"-->

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />
    <!--接收新消息通知-->
    <RelativeLayout
        android:id="@+id/news_remind"
        style="@style/style_setting_item_layout">

        <TextView
            style="@style/style_setting_item_label"
            android:text="@string/news_remind" />

        <CheckBox
            android:id="@+id/news_remind_checkbox"
            style="@style/style_item_swich"
            android:checked="true" />
    </RelativeLayout>

    <View style="@style/view_line_style" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_8"
        android:background="@color/listview_bg_nogroup" />


    <LinearLayout
        android:id="@+id/news_remind_ring_shake_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/view_line_style" />
        <!--声音-->
        <RelativeLayout
            android:id="@+id/news_remind_ring"
            style="@style/style_setting_item_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    style="@style/style_setting_item_label"
                    android:text="@string/news_remind_ring" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/base_3"
                    android:singleLine="false"
                    android:text="@string/news_remind_msg"
                    android:textColor="@color/base_black_65"
                    android:textSize="@dimen/body2_12" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/news_remind_ring_checkbox"
                style="@style/style_item_swich"
                android:checked="true" />
        </RelativeLayout>

        <View style="@style/view_line_style" />
        <!--振动-->
        <RelativeLayout
            android:id="@+id/news_remind_shake"
            style="@style/style_setting_item_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    style="@style/style_setting_item_label"
                    android:text="@string/news_remind_shake" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/base_3"
                    android:singleLine="false"
                    android:text="@string/news_remind_msg"
                    android:textColor="@color/base_black_65"
                    android:textSize="@dimen/body2_12" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/news_remind_shake_checkbox"
                style="@style/style_item_swich"
                android:checked="false" />
        </RelativeLayout>

        <View style="@style/view_line_style" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/listview_bg_nogroup" />
</LinearLayout>